# lipbin

./: .gitignore
2025_10_01_first_app/: ConsoleApplication10.cpp  build_run.bat
2025_10_02_module_app/module_APP/module_APP/: module_APP.cpp
2025_10_15/: after_refactoring_5.cpp  build_run_module_app.bat
2025_10_31/: build_run_module_app.bat  io.cpp  io.hpp  main.cpp  pve.cpp  pve.hpp  sort_operations.cpp  sort_operations.hpp
2025_11_29/: main.cpp  menu.hpp  menu_functions.cpp  menu_functions.hpp  menu_items.cpp  menu_items.hpp
2025_12_23/: .gitignore  build.bat
2025_12_23/projects/: CMakeLists.txt
2025_12_23/projects/bubble_sort/: CMakeLists.txt  test.bat
2025_12_23/projects/bubble_sort/src/: CMakeLists.txt  bubble.cpp  bubble.h
2025_12_23/projects/bubble_sort/test/: CMakeLists.txt  test_bubble.cpp
2025_12_23/projects/menu/: CMakeLists.txt  build_run_module_app.bat  menu.hpp  menu_functions.hpp  menu_items.cpp  menu_items.hpp
252008_hw1/: bubble.cpp  build_run.bat
252009_homework/: io.cpp  main.cpp  sort_operations.cpp
